src/test/ui/generic-associated-types/issue-86483.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/issue-86483.rs:9:32
   |
LL |     type Ice<'v>: IntoIterator<Item = &'v T>;
   |                                ^^^^^^^^^^^^ - help: consider adding a where clause: `where T: 'v`
   |                                |
   |                                ...so that the reference type `&'v T` does not outlive the data it points at

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
